# amvnews-leecher

./: .gitignore  AGENTS.md  IMPLEMENTATION.md  README.md  TESTING.md  pyproject.toml  scrape-hints.md
amvscrape/: __init__.py  __main__.py  cli.py  config.py  db.py  downloader.py  scraper.py
