[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amvscrape"
version = "0.1.0"
description = "Tool to scrape torrent files for AMVs from amvnews.ru"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
]

[project.scripts]
amvscrape = "amvscrape.cli:main"
